# SoCkEt7

./: CLAUDE.md  Cargo.toml  README.md  ecosystems.toml  hydra-nexus.desktop  nexus-cli  package.json  run-gui.sh  run-nexus-v2.sh  run-nexus.sh  test_config.rs
.github/workflows/: profile-activity.yml
src/: ecosystem_config.rs  gui.rs  gui_v2.rs  logger.rs  main.rs  project_scanner.rs  test_gui_minimal.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ecosystem.rs  lib.rs  main.rs
