[package]
name = "nexus"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "nexus-tui"
path = "src/main.rs"

[[bin]]
name = "nexus"
path = "src/gui.rs"

[[bin]]
name = "nexus-v2"
path = "src/gui_v2.rs"

[[bin]]
name = "test-config"
path = "test_config.rs"

[[bin]]
name = "test-gui-minimal"
path = "src/test_gui_minimal.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
chrono = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
arboard = "3.4"
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
rand = "0.8"
image = "0.25"

[profile.release]
opt-level = "z"
lto = true
strip = true
